            ----------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

21 November 2014  M. Kelsey (hadr-casc-V10-00-18)
-------------------------------------------------
Per A. Dotti, introduce G4AutoDelete for all singleton classes to avoid
end-of-job memory leaks:

	G4CascadeChannelTables.cc,.hh	(also make dtor public)
	G4CascadeParameters.cc
	G4MultiBodyMomentumDist.cc
	G4TwoBodyAngularDist.cc

21 November 2014  M. Kelsey (hadr-casc-V10-00-17)
-------------------------------------------------
- G4PreCompoundDeexcitation.cc:  Per V.I., fix memory leak on exit by passing
  excitation handler through to PreCompound.

19 November 2014  M. Kelsey (hadr-casc-V10-00-16)
-------------------------------------------------
- G4CascadeInterface.cc:  Fix parentheses in retryInelasticNucleus()
  expression for conditional-compilation flag (does not affect defaults).

18 November 2014  M. Kelsey (hadr-casc-V10-00-15)
-------------------------------------------------
- G4CascadeInterface.cc:  Fix possible infinite-loop condition where (nTries
  >= maxTries) and momentum balance fails, by regrouping conditions in
  retryInelasticNucleus().

11 November 2014  M. Kelsey (hadr-casc-V10-00-14)
-------------------------------------------------
- G4CascadeParameters.cc:  Revert default changes in V10-00-12 tag:  turn
  off phase-space, trailing-effect, and PreCompound.

- G4InuclCollider.cc:  Replace G4Fragment::GetA() with GetA_asInt().

- G4ElementaryParticleCollider.cc:  Improve optional pion-nucleon
  absorption.  NOTE:  This is DISABLED by default; used for studies of pion
  stopping.

- G4NucleiModel.cc:  Initialize local p1r variable in declaration.
