@@ -15,6 +15,13 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+1 December 2014  M. Kelsey (hadr-casc-V10-00-19)
+------------------------------------------------
+- G4ElementaryParticleCollider.cc:  In muon absorption, check return from
+  G4GDecay3 for null vector; report no-collision status and return.
+
+- G4GDecay3.cc:  Fix typo in error report to use correct class name.
+
 21 November 2014  M. Kelsey (hadr-casc-V10-00-18)
 -------------------------------------------------
 Per A. Dotti, introduce G4AutoDelete for all singleton classes to avoid
